<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.mudita.calc.MainActivity">

    <EditText
        android:id="@+id/input"
        style="@style/MuditaHeadline500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="false"
        android:background="@android:color/transparent"
        android:textColorHighlight="@android:color/transparent"
        android:textSelectHandle="@drawable/empty_select_handle"
        android:gravity="end"
        android:inputType="textNoSuggestions"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:longClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/resultDisplay"
        style="@style/MuditaTitleLarge900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="end"
        android:inputType="textNoSuggestions"
        android:paddingHorizontal="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text=""
        android:longClickable="false"
        android:textAlignment="textEnd"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:context=".MainActivity">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <Button
                    android:id="@+id/clearButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="clearButton"
                    android:text="@string/clear"
                    android:textSize="38sp" />

                <ImageButton
                    android:id="@+id/plusAndMinusButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="plusAndMinusButton"
                    app:srcCompat="@drawable/ic_negative" />

                <Button
                    android:id="@+id/devideBy100Button"
                    style="@style/MuditaHeadline500Button.Function"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:onClick="percentButton"
                    android:text="@string/devideBy100"
                    android:textSize="38sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/devideButton"
                        style="@style/MuditaHeadline500Button.WithBG"
                        android:onClick="divideButton"
                        app:srcCompat="@drawable/ic_divide" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <Button
                    android:id="@+id/sevenButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eightButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nineButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/nine" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/multiplyButton"
                        style="@style/MuditaHeadline500Button.WithBG"
                        android:onClick="multiplyButton"
                        app:srcCompat="@drawable/ic_multiply" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/fourButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/fiveButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/sixButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/six" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/substractButton"
                        style="@style/MuditaHeadline500Button.WithBG"
                        android:onClick="subtractButton"
                        app:srcCompat="@drawable/ic_substraction" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/oneButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/twoButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/threeButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/three" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/addButton"
                        style="@style/MuditaHeadline500Button.WithBG"
                        android:onClick="addButton"
                        app:srcCompat="@drawable/ic_addition" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/zeroButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/pointButton"
                    style="@style/MuditaHeadline500Button.Dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="pointButton"
                    android:text="." />

                <ImageButton
                    android:id="@+id/backspaceButton"
                    style="@style/MuditaHeadline500Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/backspace"
                    android:onClick="backspaceButton"
                    android:paddingEnd="5dp"
                    app:srcCompat="@drawable/ic_backspace" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/equalsButton"
                        style="@style/MuditaHeadline500Button"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/black"
                        android:onClick="equalsButton"
                        app:srcCompat="@drawable/ic_equal" />
                </FrameLayout>
            </TableRow>
        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/resultDisplay"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
